# swerve

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  README.md  doxygen-config  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: issue_template.md  pull_request_template.md
.github/workflows/: main.yml
app/: CMakeLists.txt  main.cpp
include/hardware/: lib.hpp
include/swerve/: lib.hpp
include/swerve/geometry/: Rotation2d.h  Translation2d.h
include/swerve/kinematics/: SwerveModuleState.h
include/swerve/units/: angle.h  base.h  dimensionless.h  length.h  math.h  time.h  velocity.h
scripts/: bootstrap.sh  format.sh
src/: CMakeLists.txt
src/hardware/: CMakeLists.txt  lib.cpp
src/swerve/: CMakeLists.txt  lib.cpp
src/swerve/geometry/: Rotation2d.cpp  Translation2d.cpp
tests/: CMakeLists.txt
tests/hardware/: CMakeLists.txt  lib.cpp
tests/swerve/: CMakeLists.txt  lib.cpp
